# emd-desafio-devops

./: README.md  app.py  pyproject.toml
