[tool.poetry]
name = "emd-desafio-devops"
version = "0.1.0"
description = ""
authors = ["Escritório de Dados <escritoriodedados@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
